cabal-version: 3.4

name:       reconstruction-attack
version:    0.1.0.0
license:    GPL-3.0-only
build-type: Simple

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    Attack
    DB

  build-depends:
    base          >= 4.19 && <5
    , statistics ^>= 0.16.4
    , split      ^>= 0.2.5
    , mwc-random ^>= 0.15.2

test-suite reconstruction-attack-test
  type: exitcode-stdio-1.0

  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base             >=4.19 && <5
    , pretty-simple ^>= 4.1.4
    , tasty         ^>= 1.5.3
    , tasty-hunit   ^>= 0.10.2
    , tasty-golden  ^>= 2.3.5
    , text          ^>= 2.1.3
    , reconstruction-attack
