cabal-version:      3.0
name:               haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            MPL-2.0
license-file:       LICENSE
author:             Your name here
maintainer:         you@email.address
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  DP
                    , Examples
                    , Tests
    other-modules: Core
                 , Measurements
                 , Noise
                 , PrivacyTracker
                 , Transformations
                 , AdultDataset

    -- other-extensions:
    build-depends:    base ^>=4.18.3.0
                    , ghc-typelits-knownnat
                    , ghc-typelits-natnormalise
                    , mtl
                    , random
                    , containers
                    , split
                    , statistics
                    , mwc-random
                    , vector

    hs-source-dirs:   src
    default-language: Haskell2010
